<resources>
    <string name="app_name">GeoTopic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_text">Place</string>
    <string name="mainfragmentPlaceHolder">MainFragment</string>
    <string name="label">Event Query</string>
    <string name="city">Enter location from SearchBar…</string>
    <string name="radius">Radius</string>
    <string name="number_picker_formatter">number_picker_formatter</string>
    <string name="radiusPickerHint">Radius</string>
    <string name="submit">Submit</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="place_address">address</string>
    <string name="place_name">name</string>
    <string name="API_KEY">AIzaSyBKq51Z_IfEPzOE1nxc2WjagcsWaZQBrUs</string>
    <string name="event_description">description</string>
    <string name="event_name">name</string>
    <string name="event_address">address</string>
    <string name="event_date">date</string>
    <string name="Description">TODO</string>
    <string name="GlideDescription">description</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="venuename">venueName</string>
</resources>