<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="@string/city"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFieldInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtQueryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/numberPickerHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiusPickerHint"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="@+id/numberPicker"
        app:layout_constraintStart_toEndOf="@+id/txtFieldInputLayout" />

    <it.sephiroth.android.library.numberpicker.NumberPicker
        android:id="@+id/numberPicker"
        style="@style/NumberPicker.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="250"
        app:layout_constraintBottom_toBottomOf="@+id/txtFieldInputLayout"
        app:layout_constraintStart_toEndOf="@+id/txtFieldInputLayout"
        app:layout_constraintTop_toTopOf="@+id/txtFieldInputLayout"
        app:picker_max="5000"
        app:picker_min="0"
        app:picker_orientation="vertical"
        app:picker_stepSize="25"
        app:picker_tracker="exponential" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        android:foregroundTint="@color/white"
        android:src="@android:drawable/ic_menu_search"
        android:theme="@style/Theme.GeoTopic"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>